Finish main page

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     </div>
     <span>
             <div class="scenrio">
-                <h2 class="cover-heading text-center">Technical Documentation Writing</h2>
+                <h2 class="cover-heading text-center">LET US TELL YOU ABOUT OUR CRAFT</h2>
                 <p class="cover-paragraph">
-                    Knowledge are generated throughout the entire life cycle of your project. From problem discovery to product delivery, your project is forged through many insightful chats and many decisions made. Too often you find your notes all over the place yet you cannot locate the specific detail you need. The project is an entirety, so should your documentation be. HackMD is the only tool you need for technical documentation.
+                  We are a small and young team of developers that love what they do.  We build apps, products and experiences that represent you. Your product. Your company. Your audience.
                 </p>
             </div>
             <div class="features">
@@ -60,24 +60,24 @@
                                 <div class="feature-heading">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
-                                        <i class="fa fa-users fa-stack-1x"></i>
+                                        <i class="fa fa-lightbulb-o fa-stack-1x"></i>
                                     </span>
-                                    <span>Documentation<br>Collaborated</span>
+                                    <span>DISCOVERY</span>
                                 </div>
                                 <p class="feature-paragraph">
-                                    Documentation <em>IS</em> conversation. It is a conversation between you and your colleagues and the future you. Create the document when and where the conversation happens. Record all discussions and pivots while the idea flows and resonates.
+                                        Our lean process delivers high-value items first. Iterative testing and analytics keep us continually focused on generating the best return for your business. We ask big questions: Why are we here? Where are we going? Asking the right questions is critical to discovering the best approach. 
                                 </p>
                             </div>
                             <div class="feature col-md-6">
                                 <div class="feature-heading">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle dark fa-stack-2x"></i>
-                                        <i class="fa fa-stack-1x icon icon-bias icon-context-captured"></i>
+                                        <i class="fa fa-paint-brush fa-stack-1x"></i>
                                     </span>
-                                    <span>Context Captured</span>
+                                    <span>DESIGN</span>
                                 </div>
                                 <p class="feature-paragraph">
-                                    Add context to your points instantly with PDFs, images, and videos. With automatic save, every bit of editing is captured and everyone’s contribution is attributed to their names. Easily revert back to previous edition if needed.
+                                        We study the science of user behavior. Smart design stays out of your way. A beautiful interface elevates content to its best form. It instills confidence in your users and builds trust in your brand.
                                 </p>
                             </div>
                 </div>
@@ -86,30 +86,30 @@
                                 <div class="feature-heading">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle dark fa-stack-2x"></i>
-                                        <i class="fa fa-stack-1x icon icon-markdown"></i>
+                                        <i class="fa fa-code fa-stack-1x"></i>
                                     </span>
-                                    <span>Native Markdown</span>
+                                    <span>DEVELOPMENT</span>
                                 </div>
                                 <p class="feature-paragraph">
-                                    If you write in markdown, why change for your tools? With HackMD, all your writings would be in markdown and portable to any platform. No more jammed formatting when copy-paste. You can even “write” flow charts, math formulae, and graphviz!
+                                        This is where it all comes together. This is where your lightning-fast app is born and where our lifelong dedication to engineering shines. Our developers don’t come to work to do a job—they come to perfect their craft.
                                 </p>
                             </div>
                             <div class="feature col-md-6">
                                 <div class="feature-heading">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
-                                        <i class="fa fa-stack-1x icon icon-knowledge-net"></i>
+                                        <i class="fa fa-code-fork fa-stack-1x"></i>
                                     </span>
-                                    <span>Knowledge Net</span>
+                                    <span>DEPLOYMENT</span>
                                 </div>
                                 <p class="feature-paragraph">
-                                    Your projects are built on top of each others. A single piece of knowledge could be relevant to many projects. Documentation shouldn’t be siloed into nested folders. Collect related notes into a book with HackMD <em>Book Mode</em>. Read documents like reading a story, not panning for gold.
+                                        This isn’t a one-night stand. We’re shooting for long, successful relationships. We use analytics, heat-mapping, split testing, and user research to be dead sure we get it right, and stay on track after launch.
                                 </p>
                             </div>
                 </div>   
             </div>
-            <div class="scenrio">
-                <h2 class="cover-heading">Technical Sharing and Presentation</h2>
+            <!-- <div class="scenrio">
+                <h2 class="cover-heading text-center">Technical Sharing and Presentation</h2>
                 <p class="cover-paragraph">
                     Knowledge won’t last until it is written. Written knowledge are meant to be shared. HackMD helps you do sharing right, not only documentation but also presentation. HackMD removes the overheads and hassles so you could share and learn more, and more often. Whether you are the one presenting, or the one taking notes, or even the event organizer, we got your back covered.
                 </p>
@@ -119,7 +119,7 @@
                     <div class="feature-heading">
                         <span class="fa-stack fa-lg">
                             <i class="fa fa-circle fa-stack-2x"></i>
-                            <i class="fa fa-stack-1x icon icon-turn-note-into-slides"></i>
+                            <i class="fa fa-users fa-stack-1x"></i>
                         </span>
                         <span>Turn Notes into Slides</span>
                     </div>
@@ -131,7 +131,7 @@
                     <div class="feature-heading">
                         <span class="fa-stack fa-lg">
                             <i class="fa fa-circle dark fa-stack-2x"></i>
-                            <i class="fa fa-stack-1x icon icon-bias icon-better-conference-experience"></i>
+                            <i class="fa fa-users fa-stack-1x"></i>
                         </span>
                         <span>Better Conference<br>Experience</span>
                     </div>
@@ -151,11 +151,11 @@
                         Have a question for the speaker? Don’t pass microphone around in the 21st century. Write down your questions in the embedded disqus forum and know that the speaker will read your questions with clarity. Extend the workshop online so the connection lasts forever.
                     </p>
                 </div>
-            </div>
+            </div> -->
             <div class="quote">
-                <i class="icon icon-quote-left" aria-hidden="true"></i>
+                <i class="fa fa-quote-left" aria-hidden="true"></i>
                 <span>We help brands all over the world to create impressive products.</span>
-                <i class="icon icon-quote-right" aria-hidden="true"></i>
+                <i class="fa fa-quote-right" aria-hidden="true"></i>
             </div>       
     </span>
 </div>
