Change in contact page
- added animate.css - I want to add effects  when the start button is
clicked
- contact icon resources
- added rules for the button -- the html part is commented until i have
the startProject page
- removed matrix effect
- page cleanup

--- a/contact-us.html
+++ b/contact-us.html
@@ -46,13 +46,17 @@
             <div class="col-md-3 offset-md-3"></div>
             <div class="col-md-6">
                     <div class="lead text-center">
-                            <p>Let's chat about your new project.</p>
-                            <a type="button" href="#" class="btn btn-lg btn-primary" style="min-width: 200px;">Start your project</a>
+                            <a type="button" href="coming-soon.html" class="btn btn-lg btn-primary" style="min-width: 200px;">Start your project</a>
                     </div>
             </div>
             <div class="col-md-3 offset-md-3"></div>
         </div>
     </div>
+    <!-- <div class="contact-icon">
+            <a href="#">
+                <img data-alt-src="img/contact-icon.gif" src="img/contact-icon.png" alt="Contact us">
+            </a>
+    </div> -->
     <footer class="footer">
         <nav class="footer_nav">
             <section class="footer_col footer_col-intro">
@@ -82,6 +86,5 @@
             <small class="footer_legal">© 2018 JoinStack.</small>
         </nav>   
     </footer>
-    <script src="js/main.js"></script>
 </body>
 </html>
