Adding container class in about page

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 </head>
 <body>
-        <div class="nav-container">
+        <div class="container nav-container">
                 <nav>
                     <input type="checkbox" id="nav" class="hidden">
                     <label for="nav" class="nav-btn">
@@ -33,7 +33,7 @@
                     </div>
                     
                 </nav>
-            </div>
+        </div>
     <div class="container about-container">
         <div class="row">
             <div class="col-md-6">
