--- a/coming-soon.html
+++ b/coming-soon.html
@@ -34,7 +34,7 @@
                 </nav>
             </div>
     <div class="matrix-effect">
-        <p class=matrix-ad>Coming soon</p>
+        <p class="matrix-ad">Coming soon</p>
     </div>
     
     <footer class="footer">
