--- a/contact-us.html
+++ b/contact-us.html
@@ -46,7 +46,7 @@
             <div class="col-md-3 offset-md-3"></div>
             <div class="col-md-6">
                     <div class="lead text-center">
-                            <a type="button" href="coming-soon.html" class="btn btn-lg btn-primary" style="min-width: 200px;">Start your project</a>
+                            <a type="button" href="startProject.html" class="btn btn-lg btn-primary" style="min-width: 200px;">Start your project</a>
                     </div>
             </div>
             <div class="col-md-3 offset-md-3"></div>
