--- a/about.html
+++ b/about.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <title>JoinStack | Developing software that matters</title>
+    <meta name="description" content="Hello! We are JoinStack, we build apps, products and experiences that
+    represent you. Your product. Your company. Your audience.">
+    <meta name="keywords" content="Software Development, Web Agency, Software Company, App Development, UX, Web Design,
+    Build app, Build Android App, Build IOS App, IOS App, Android App, IOS APP, Website, Consultancy, Outsourcing">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="JoinStack">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
