--- a/startProject.html
+++ b/startProject.html
@@ -8,8 +8,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
   <title>Start Project | JoinStack</title>
-  <meta name="description" content="Results Driven Web Design And Digital Marketing Studio">
-  <meta name="keywords" content="web, website, user experience, ux, designer, graphics, product, user interface, ui, developer, css, html, jQuery, mobile, developer, business">
+  <meta name="description" content="Young software development company">
+  <meta name="keywords" content="Software Development, Web Agency, Software Company, App Development, UX, Web Design,
+  Build app, Build Android App, Build IOS App, IOS App, Android App, IOS APP, Website, Consultancy, Outsourcing">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="JoinStack">
 
   <link rel="shortcut icon" href="favicon.ico">
