Change in labels

--- a/startProject.html
+++ b/startProject.html
@@ -14,7 +14,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="JoinStack">
 
-  <link rel="shortcut icon" href="favicon.ico">
+  
+  <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" /> 
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400%7CMontserrat:600,800" rel="stylesheet">
   <link href="style/styles.css" rel="stylesheet" type="text/css" />
   <script src="js/js-dist.js"></script>
@@ -77,17 +79,17 @@
                   </figure>
                   <h3>Website</h3>
                 </div>
-                <div class="col-xs-5 col-sm-3 col-xs-offset-1 col-sm-offset-0 link js-show-section" data-form="marketing">
+                <div class="col-xs-5 col-sm-3 col-xs-offset-1 col-sm-offset-0 link js-show-section" data-form="blockchain">
                   <figure class="form-icon">
                     <img src="img/form/icon-ecommerce.svg" alt="Ecommerce">
                   </figure>
-                  <h3>Marketing</h3>
+                  <h3>Blockchain</h3>
                 </div>
-                <div class="col-xs-5 col-sm-3 link js-show-section" data-form="brand">
+                <div class="col-xs-5 col-sm-3 link js-show-section" data-form="mobile">
                   <figure class="form-icon">
-                    <img src="img/form/icon-brand.svg" alt="Brand">
+                    <img src="img/form/icon-brand.svg" alt="Mobile">
                   </figure>
-                  <h3>Brand</h3>
+                  <h3>Mobile</h3>
                 </div>
                 <div class="col-xs-5 col-sm-3 col-xs-offset-1 col-sm-offset-0 link js-show-section" data-form="chat">
                   <figure class="form-icon">
@@ -267,7 +269,7 @@
         <!-- End of #website -->
 
         <!-- Start of #ecommerce -->
-        <section class="main-type" id="marketing">
+        <section class="main-type" id="blockchain">
           <div class="grid-wrap">
             <nav class="form-pager form-pager-2">
               <ul>
@@ -293,16 +295,16 @@
                     <div class="row start-xs center-sm">
                       <div class="col-xs-6 col-sm-3 col-sm-offset-0 js-form-link" data-anchor="ecommerce-step-2">
                         <figure class="form-icon">
-                          <img src="img/form/icon-web-design.svg" alt="Web design">
+                          <img src="img/form/icon-web-design.svg" alt="Decentralized application development">
                         </figure>
-                        <h3 class="center">SEO</h3>
+                        <h3 class="center">DAPP</h3>
                       </div>
 
                       <div class="col-xs-6 col-sm-3 col-sm-offset-0 js-form-link js-form-link" data-anchor="ecommerce-step-2">
                         <figure class="form-icon">
-                          <img src="img/form/icon-web-code.svg" alt="Web decelopment">
+                          <img src="img/form/icon-web-code.svg" alt="Token Issuing">
                         </figure>
-                        <h3 class="center">PPC Campaign</h3>
+                        <h3 class="center">Token Issuing</h3>
                       </div>
 
                       <div class="col-xs-6 col-sm-3 col-xs-offset-3 col-sm-offset-0 js-form-link" data-anchor="ecommerce-step-2">
@@ -431,19 +433,19 @@
           </div>
         </section>
 
-        <!-- End of #marketing -->
-        <section class="main-type" id="brand">
+        <!-- End of #blockchain -->
+        <section class="main-type" id="mobile">
           <div class="grid-wrap">
             <nav class="form-pager form-pager-3">
               <ul>
-                <li><a href="#brand-step-1" data-anchor="brand-step-1">01</a></li>
-                <li><a href="#brand-step-2" data-anchor="brand-step-2">02</a></li>
-                <li><a href="#brand-step-3" data-anchor="brand-step-3">03</a></li>
-                <li><a href="#brand-step-4" data-anchor="brand-step-4">04</a></li>
+                <li><a href="#mobile-step-1" data-anchor="mobile-step-1">01</a></li>
+                <li><a href="#mobile-step-2" data-anchor="mobile-step-2">02</a></li>
+                <li><a href="#mobile-step-3" data-anchor="mobile-step-3">03</a></li>
+                <li><a href="#mobile-step-4" data-anchor="mobile-step-4">04</a></li>
               </ul>
             </nav>
             <form action="" method="post" id="form-3">
-              <div id="brand-step-1" class="step step-1">
+              <div id="mobile-step-1" class="step step-1">
                 <div class="offset-top-sm">
                   <div class="row center-xs">
                     <div class="col-xs-12 col-sm-9 col-md-7">
@@ -456,21 +458,21 @@
                   </div>
                   <div class="option-wrap">
                     <div class="row start-xs center-sm">
-                      <div class="col-xs-6 col-sm-3 col-sm-offset-0 js-form-link" data-anchor="brand-step-2">
+                      <div class="col-xs-6 col-sm-3 col-sm-offset-0 js-form-link" data-anchor="mobile-step-2">
                         <figure class="form-icon">
                           <img src="img/form/icon-web-design.svg" alt="Web design">
                         </figure>
-                        <h3 class="center">Logo Design</h3>
+                        <h3 class="center">Mobile App Design</h3>
                       </div>
 
-                      <div class="col-xs-6 col-sm-3 col-sm-offset-0 js-form-link" data-anchor="brand-step-2">
+                      <div class="col-xs-6 col-sm-3 col-sm-offset-0 js-form-link" data-anchor="mobile-step-2">
                         <figure class="form-icon">
                           <img src="img/form/icon-web-code.svg" alt="Web decelopment">
                         </figure>
-                        <h3 class="center">Brand Materials</h3>
+                        <h3 class="center">Mobile Web & Native Apps</h3>
                       </div>
 
-                      <div class="col-xs-6 col-sm-3 col-xs-offset-3 col-sm-offset-0 js-form-link" data-anchor="brand-step-2">
+                      <div class="col-xs-6 col-sm-3 col-xs-offset-3 col-sm-offset-0 js-form-link" data-anchor="mobile-step-2">
                         <figure class="form-icon">
                           <img src="img/form/icon-web-both.svg" alt="Full service">
                         </figure>
@@ -482,7 +484,7 @@
                 </div>
               </div>
               <!-- End of step 1 -->
-              <div id="brand-step-2" class="step step-2">
+              <div id="mobile-step-2" class="step step-2">
                 <div class="offset-top-sm">
                   <div class="row center-xs">
                     <div class="col-xs-12 col-sm-9 col-md-7">
@@ -515,7 +517,7 @@
               </div>
               <!-- End of step 2 -->
 
-              <div id="brand-step-3" class="step step-3">
+              <div id="mobile-step-3" class="step step-3">
                 <div class="offset-top-sm">
                   <div class="row center-xs">
                     <div class="col-xs-12 col-sm-9 col-md-7">
@@ -561,7 +563,7 @@
               </div>
               <!-- End of step 3 -->
 
-              <div id="brand-step-4" class="step step-4">
+              <div id="mobile-step-4" class="step step-4">
                 <div class="offset-top-sm">
                   <div class="row center-xs">
                     <div class="col-xs-12 col-sm-9 col-md-7">
@@ -595,7 +597,7 @@
             </form>
           </div>
         </section>
-        <!-- End of #brand-->
+        <!-- End of #mobile-->
 
         <!--start of chat -->
         <section class="main-type" id="chat">
