--- a/services.html
+++ b/services.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 </head>
 <body>
-        <div class="services-container">
+        <div class="container">
                 <nav>
                     <input type="checkbox" id="nav" class="hidden">
                     <label for="nav" class="nav-btn">
