commenting coming-soon page

--- a/contact-us.html
+++ b/contact-us.html
@@ -76,7 +76,7 @@
                         <a href="index.html" class="footer_link" data-footer-link="1">Home</a>
                         <a href="about.html" class="footer_link" data-footer-link="2">About</a>
                         <a href="services.html" class="footer_link" data-footer-link="3">Services</a>
-                        <a href="coming-soon.html" class="footer_link" data-footer-link="4">Blog</a>
+                        <!-- <a href="coming-soon.html" class="footer_link" data-footer-link="4">Blog</a> -->
                         <a href="contact-us.html" class="footer_link" data-footer-link="5">Contact Us</a>
                      </div>
                 </div>
