--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About</a></li>
                             <li><a href="services.html">Services</a></li>
-                            <li><a href="coming-soon.html">Blog</a></li>
+                            <!-- <li><a href="coming-soon.html">Blog</a></li> -->
                             <li><a href="contact-us.html">Contact Us</a></li>
                         </ul>
                     </div>
@@ -65,7 +65,7 @@
                         <a href="index.html" class="footer_link" data-footer-link="1">Home</a>
                         <a href="about.html" class="footer_link" data-footer-link="2">About</a>
                         <a href="services.html" class="footer_link" data-footer-link="3">Services</a>
-                        <a href="coming-soon.html" class="footer_link" data-footer-link="4">Blog</a>
+                        <!-- <a href="coming-soon.html" class="footer_link" data-footer-link="4">Blog</a> -->
                         <a href="contact-us.html" class="footer_link" data-footer-link="5">Contact Us</a>
                      </div>
                 </div>
