--- a/contact-us.html
+++ b/contact-us.html
@@ -33,7 +33,7 @@
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About</a></li>
                             <li><a href="services.html">Services</a></li>
-                            <li><a href="coming-soon.html">Blog</a></li>
+                            <!-- <li><a href="coming-soon.html">Blog</a></li> -->
                             <li><a href="contact-us.html">Contact Us</a></li>
                         </ul>
                     </div>
