--- a/index.html
+++ b/index.html
@@ -12,40 +12,42 @@
     <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" /> 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="style/main.css" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" media="screen" href="style/main.css" />
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 </head>
 <body>
-    <div class="container main-page">
-        <nav>
-            <input type="checkbox" id="nav" class="hidden">
-            <label for="nav" class="nav-btn">
-                    <i></i>
-                    <i></i>
-                    <i></i>
-            </label>
-            <div class="logo">
-                <a href="#">JOINSTACK</a>
+    <div class="main-page">
+        <div class="wave">
+            <nav>
+                <input type="checkbox" id="nav" class="hidden">
+                <label for="nav" class="nav-btn">
+                        <i></i>
+                        <i></i>
+                        <i></i>
+                </label>
+                <div class="logo">
+                    <a href="#">JOINSTACK</a>
+                </div>
+                <div class="nav-wrapper">
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <!-- <li><a href="coming-soon.html">Blog</a></li> -->
+                        <li><a href="contact-us.html">Contact Us</a></li>
+                    </ul>
+                </div>
+                
+            </nav>
+            <div class="matrix-effect">
+                    <h1>
+                            <p href="" class="typewrite" data-period="2000" data-type='[ "JoinStack - A software company", "Creating impressive products.", "We bring designs to life.", "You name it, we make it." ]'>
+                            <span class="wrap"></span>
+                            </p>
+                    </h1>    
             </div>
-            <div class="nav-wrapper">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <!-- <li><a href="coming-soon.html">Blog</a></li> -->
-                    <li><a href="contact-us.html">Contact Us</a></li>
-                </ul>
-            </div>
-            
-        </nav>
-    <div class="matrix-effect">
-            <h1>
-                    <p href="" class="typewrite" data-period="2000" data-type='[ "JoinStack - A software company", "Creating impressive products.", "We bring designs to life.", "You name it, we make it." ]'>
-                      <span class="wrap"></span>
-                    </p>
-            </h1>    
-    </div>
+        </div> 
     <span>
             <div class="scenrio">
                 <h2 class="cover-heading text-center">LET US TELL YOU ABOUT OUR CRAFT</h2>
