--- a/jobs.html
+++ b/jobs.html
@@ -1,1 +1,74 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <title>JoinStack | Developing software that matters</title>
+    <meta name="description" content="Hello! We are JoinStack, we build apps, products and experiences that
+    represent you. Your product. Your company. Your audience.">
+    <meta name="keywords" content="Software Development, Web Agency, Software Company, App Development, UX, Web Design,
+    Build app, Build Android App, Build IOS App, IOS App, Android App, IOS APP, Website, Consultancy, Outsourcing">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="JoinStack">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style/main.css" />
+    <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+</head>
+<body>
+        <div class="container">
+                <nav>
+                    <input type="checkbox" id="nav" class="hidden">
+                    <label for="nav" class="nav-btn">
+                            <i></i>
+                            <i></i>
+                            <i></i>
+                    </label>
+                    <div class="logo">
+                        <a href="#">JOINSTACK</a>
+                    </div>
+                    <div class="nav-wrapper">
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="services.html">Services</a></li>
+                            <!-- <li><a href="coming-soon.html">Blog</a></li> -->
+                            <li><a href="contact-us.html">Contact Us</a></li>
+                        </ul>
+                    </div>
+                    
+                </nav>
+            </div>
+        </div>           
+    <footer class="footer">
+        <nav class="footer_nav">
+            <section class="footer_col footer_col-intro">
+            <h3 class="logo_footer">JoinStack</h3>
+            <p class="footer_slogan">We help brands all over the world to create impressive products.</p>
+            </section>
+            <section class="footer_col">
+                <div class="footer_explore">
+                    <h4 class="footer_col-title">Explore</h4>
+                    <div class="footer_nav-list">
+                        <a href="index.html" class="footer_link" data-footer-link="1">Home</a>
+                        <a href="about.html" class="footer_link" data-footer-link="2">About</a>
+                        <a href="services.html" class="footer_link" data-footer-link="3">Services</a>
+                        <!-- <a href="coming-soon.html" class="footer_link" data-footer-link="4">Blog</a> -->
+                        <a href="contact-us.html" class="footer_link" data-footer-link="5">Contact Us</a>
+                     </div>
+                </div>
+            </section>
+            <section class="footer_col">
+                <div class="footer_col-wrap">
+                    <h4 class="footer_col-title">Follow</h4>
+                    <a href="https://www.linkedin.com/company/joinstack/" target="_blank" class="footer_link">LinkedIn</a>
+                    <a href="https://www.instagram.com/wearejoinstack/" target="_blank" class="footer_link">Instagram</a>
+                    <a href="https://github.com/joinstack" target="_blank" class="footer_link">Github</a>
+                </div>
+            </section>
+            <small class="footer_legal">© 2018 JoinStack.</small>
+        </nav>   
+    </footer>
+</body>
+</html>
