Changing github with joinstack

--- a/jobs.html
+++ b/jobs.html
@@ -64,7 +64,7 @@
                     <h4 class="footer_col-title">Follow</h4>
                     <a href="https://www.linkedin.com/company/joinstack/" target="_blank" class="footer_link">LinkedIn</a>
                     <a href="https://www.instagram.com/wearejoinstack/" target="_blank" class="footer_link">Instagram</a>
-                    <a href="https://github.com/joinstack" target="_blank" class="footer_link">Github</a>
+                    <a href="https://www.facebook.com/joinstack/" target="_blank" class="footer_link">Facebook</a>
                 </div>
             </section>
             <small class="footer_legal">© 2018 JoinStack.</small>
