Removing icons in main page

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
             <div class="features">
                 <div class="row">
                         <div class="feature col-md-6">
-                                <div class="feature-heading">
-                                    <span class="fa-stack fa-lg">
+                                <div class="feature-heading text-center">
+                                    <!-- <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-lightbulb-o fa-stack-1x"></i>
-                                    </span>
+                                    </span> -->
                                     <span>DISCOVERY</span>
                                 </div>
                                 <p class="feature-paragraph">
@@ -68,11 +68,11 @@
                                 </p>
                             </div>
                             <div class="feature col-md-6">
-                                <div class="feature-heading">
-                                    <span class="fa-stack fa-lg">
+                                <div class="feature-heading text-center">
+                                    <!-- <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle dark fa-stack-2x"></i>
                                         <i class="fa fa-paint-brush fa-stack-1x"></i>
-                                    </span>
+                                    </span> -->
                                     <span>DESIGN</span>
                                 </div>
                                 <p class="feature-paragraph">
@@ -82,11 +82,11 @@
                 </div>
                 <div class="row">
                         <div class="feature col-md-6">
-                                <div class="feature-heading">
-                                    <span class="fa-stack fa-lg">
+                                <div class="feature-heading text-center">
+                                    <!-- <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle dark fa-stack-2x"></i>
                                         <i class="fa fa-code fa-stack-1x"></i>
-                                    </span>
+                                    </span> -->
                                     <span>DEVELOPMENT</span>
                                 </div>
                                 <p class="feature-paragraph">
@@ -94,11 +94,11 @@
                                 </p>
                             </div>
                             <div class="feature col-md-6">
-                                <div class="feature-heading">
-                                    <span class="fa-stack fa-lg">
+                                <div class="feature-heading text-center">
+                                    <!-- <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-code-fork fa-stack-1x"></i>
-                                    </span>
+                                    </span> -->
                                     <span>DEPLOYMENT</span>
                                 </div>
                                 <p class="feature-paragraph">
