--- a/services.html
+++ b/services.html
@@ -44,7 +44,7 @@
                 <div class="row">
                         <div class="col-md-12 center-text">
                             <h2>Our services</h2>
-                            <p>We build apps, products and experiences that represent you. Your product. Your company. Your audience.</p>
+                            <p class="services-par">We build apps, products and experiences that represent you. Your product. Your company. Your audience.</p>
                         </div>
                 </div>
                 <div class="row">
