--- a/coming-soon.html
+++ b/coming-soon.html
@@ -60,11 +60,11 @@
                 <div class="footer_col-wrap">
                     <h4 class="footer_col-title">Follow</h4>
                     <a href="https://www.linkedin.com/company/joinstack/" target="_blank" class="footer_link">LinkedIn</a>
-                    <a href="https://www.instagram.com/joinstack_/" target="_blank" class="footer_link">Instagram</a>
+                    <a href="https://www.instagram.com/wearejoinstack/" target="_blank" class="footer_link">Instagram</a>
                     <a href="https://www.facebook.com/joinstack/" target="_blank" class="footer_link">Facebook</a>
                 </div>
             </section>
-            <small class="footer_legal">© 2019 JoinStack.</small>
+            <small class="footer_legal">© 2020 JoinStack.</small>
         </nav>   
     </footer>
     <script src="js/main.js"></script>
