Changing services page. Removing blockchain services

--- a/services.html
+++ b/services.html
@@ -55,14 +55,14 @@
             </div>
             <div class="container">
                 <div class="row">
-                        <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="content-wrapper">
                                     <div class="body-text">
                                         <ul>
                                             <li class="header">User Experience (UX)</li>
                                             <li>User Flows</li>
                                             <li>Multi-device Wireframes</li>
-                                            <li>Invision Prototypes</li>
+                                            <li>Adobe XD Prototypes</li>
                                             <li>Brand style guides</li>
                                             <li>Information Architecture</li>
                                         </ul>
@@ -70,7 +70,7 @@
                                 </div>
                         </div>
                         <div class="">
-                            <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="body-text">
                                     <ul>
                                         <li class="header">UI Design</li>
@@ -83,7 +83,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="col-lg-4 col-md-12 col-sm-12">
                             <div class="content-wrapper">
                                 <div class="body-text">
                                     <ul>
@@ -97,7 +97,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12">
+                        <!-- <div class="col-lg-3 col-md-6 col-sm-12">
                             <div class="content-wrapper">
                                 <div class="body-text">
                                     <ul>
@@ -110,7 +110,7 @@
                                     </ul>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                 </div>      
             </div>           
     <footer class="footer">
