--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
                     <a href="https://github.com/joinstack" target="_blank" class="footer_link">Github</a>
                 </div>
             </section>
-            <small class="footer_legal">© 2020 JoinStack.</small>
+            <small class="footer_legal">© 2020 JoinStack. All Rights Reserved.</small>
         </nav>   
     </footer>
     <script src="js/about.js"></script>
