Update footer - coming soon page

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -64,7 +64,7 @@
                     <a href="https://www.facebook.com/joinstack/" target="_blank" class="footer_link">Facebook</a>
                 </div>
             </section>
-            <small class="footer_legal">© 2020 JoinStack.</small>
+            <small class="footer_legal">© 2020 JoinStack. All Rights Reserved.</small>
         </nav>   
     </footer>
     <script src="js/main.js"></script>
